--- a/tests/02.read_parquet.ipynb
+++ b/tests/02.read_parquet.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "ae7ffb76ecea23c3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -39,20 +37,20 @@
     "    .config(\"spark.sql.parquet.int96RebaseModeInWrite\", \"CORRECTED\")\n",
     "    .getOrCreate()\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2bbe2aab8af50f0",
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
-    "df = spark.read.parquet(\"\", recursiveFileLookup=True)\n",
+    "df = spark.read.parquet(\"s3a://blueriver-datalake/data/raw_rds/store/tb_lower\", recursiveFileLookup=True)\n",
     "df.show(truncate=False)"
-   ]
+   ],
+   "id": "4e8cd8b0193c945",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
